Update demo resources for the analytics vs. marketing example

--- a/fidesctl/demo_resources/demo_policy.yml
+++ b/fidesctl/demo_resources/demo_policy.yml
@@ -1,11 +1,11 @@
 policy:
   - organization_fides_key: 1
-    fides_key: "primaryPrivacyPolicy"
-    name: "Primary Privacy Policy"
+    fides_key: "demo_privacy_policy"
+    name: "Demo Privacy Policy"
     description: "The main privacy policy for the organization."
     rules:
       - organization_fides_key: 1
-        fides_key: "rejectDirectMarketing"
+        fides_key: "reject_direct_marketing"
         name: "Reject Direct Marketing"
         description: "Disallow collecting any user contact info to use for marketing."
         data_categories:
