--- a/fidesctl/demo_resources/demo_dataset.yml
+++ b/fidesctl/demo_resources/demo_dataset.yml
@@ -10,29 +10,29 @@ dataset:
         description: "User's first name"
         path: "demo_users_dataset.first_name"
         data_categories:
-          - name
+          - user.provided.identifiable.name
       - name: "email"
         description: "User's Email"
         path: "demo_users_dataset.email"
         data_categories:
-          - user_provided_email
+          - user.provided.identifiable.contact.email
       - name: "state"
         description: "User's State"
         path: "demo_users_dataset.state"
         data_categories:
-          - user_provided_state
+          - user.provided.identifiable.contact.state
       - name: "food_preference"
         description: "User's favorite food"
         path: "demo_users_dataset.food_preference"
         data_categories:
-          - user_provided_data
+          - user.provided.nonidentifiable
       - name: "created_at"
         description: "User's creation timestamp"
         path: "demo_users_dataset.created_at"
         data_categories:
-          - system_data
+          - system.operations
       - name: "uuid"
         description: "User's unique ID"
         path: "demo_users_dataset.uuid"
         data_categories:
-          - unique_id
+          - user.derived.identifiable.unique_id
