--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -1,11 +1,11 @@
 system:
   - organization_fides_key: 1
-    fides_key: "demo_analytics_system"
-    name: "Demo Analytics System"
-    description: "A system used for analyzing customer behaviour."
-    system_type: "Service"
+    fides_key: demo_analytics_system
+    name: Demo Analytics System
+    description: A system used for analyzing customer behaviour.
+    system_type: Service
     privacy_declarations:
-      - name: "Analyze customer behaviour for improvements."
+      - name: Analyze customer behaviour for improvements.
         data_categories:
           - user.provided.identifiable.contact
           - user.derived.identifiable.device.cookie_id
@@ -17,12 +17,12 @@ system:
           - demo_users_dataset
 
   - organization_fides_key: 1
-    fides_key: "demo_marketing_system"
-    name: "Demo Marketing System"
-    description: "Collect data about our users for marketing."
-    system_type: "Service"
+    fides_key: demo_marketing_system
+    name: Demo Marketing System
+    description: Collect data about our users for marketing.
+    system_type: Service
     privacy_declarations:
-      - name: "Collect data for marketing"
+      - name: Collect data for marketing
         data_categories:
           # - user.provided.identifiable.contact # uncomment to add this category to the system
           - user.derived.identifiable.device.cookie_id
