Start fixing tests

--- a/fidesctl/tests/data/passing_taxonomy.yml
+++ b/fidesctl/tests/data/passing_taxonomy.yml
@@ -108,7 +108,7 @@ system:
 
 policy:
   - organization_fides_key: 1
-    fides_key: passing_privacy_policy
+    fides_key: primary_privacy_policy
     name: Primary Privacy Policy
     description: The main privacy policy for the organization.
     rules:
