Refactor data categories & data use taxonomy (+various style fixes) (#117)
* Refactor data categories taxonomy

This makes several large edits to the taxonomy:
* Replaces all existing fides_keys with fully-qualified, dot-notation
  paths like "user.provided.contact.email" instead of the previous
  "user_provided_email", which was in the overall path:
  - user_provided_data
    - provided_contact_information
      - user_provided_email

* Add a new top-level "user" category, which is the new parent for the
  previous "user_provided_data" and "derived_data categories". This makes
  the top-level categories all related to different types of "owners"

* Introduce "identifiable" and "nonidentifiable" sub-categories to the
  "user.provided" and "user.derived" categories, to give a clear
  boundary to where identifiable data is located

* Various miscellaneous key renames for conciseness, now that we are
  providing the fully-qualified path (e.g. instead of
  "contact_information" use "contact", or instead of "social_data" use
  "social"

The intent here is to make the taxonomy a lot easier to read and consume
without a heavy amount of training up front.

* Update demo_resources

* Update generate-dataset to add an empty list of data_categories

...sorry this is unrelated to the work on this branch, but I noticed it
and really wanted it to work this way! :)

* updated the FidesKey validation to accept "."

* Update fixtures in conftest.py

* Update tests/cli

* Update tests/

* add the validation logic, still need to add tests and fix another bug [ci skip]

* Update docs

* Update taxonomy tests

* Change all docs references to use github pages

* Update stray stale data categories references

* Start fixing tests

* Disable parent_key validation temporarily

* Fix fixtures to use custom taxonomy objects (not try to redefine default ones)

* Refactor data_uses with dot-notation

* Fix tests!

* Update YML files t

--- a/fidesctl/default_taxonomy/data_uses.yml
+++ b/fidesctl/default_taxonomy/data_uses.yml
@@ -1,74 +1,74 @@
 data_use:
   # Provided Data
-  - fides_key: "provide_the_product_or_service"
-    name: "Provide the Product or Service"
+  - fides_key: provide_product_or_service
+    name: Provide the Product or Service
 
-  - fides_key: "support_the_product_or_service"
-    name: "Support the Product or Service"
-    parent_key: "provide_the_product_or_service"
+  - fides_key: provide_product_or_service.support
+    name: Support the Product or Service
+    parent_key: provide_product_or_service
 
-  - fides_key: "support_optimization"
-    name: "Support Optimization"
-    parent_key: "provide_the_product_or_service"
+  - fides_key: provide_product_or_service.support_optimization
+    name: Support Optimization
+    parent_key: provide_product_or_service
 
-  - fides_key: "offers_of_product_or_service_upgrades"
-    name: "Offers of Product or Service Upgrades"
-    parent_key: "provide_the_product_or_service"
+  - fides_key: provide_product_or_service.offer_upgrades
+    name: Offers of Product or Service Upgrades
+    parent_key: provide_product_or_service
 
   # Improvement Data
-  - fides_key: "improve_the_product_or_service"
-    name: "Improve the Product or Service"
+  - fides_key: improve_product_or_service
+    name: Improve the Product or Service
 
   # Personalize Data
-  - fides_key: "personalize_the_product_or_service"
-    name: "Personalize the Product or Service"
+  - fides_key: personalize_product_or_service
+    name: Personalize the Product or Service
 
   # Marketing, Advertising or Promotion Data
-  - fides_key: "marketing_advertising_or_promotion"
-    name: "Marketing, Advertising or Promotion"
+  - fides_key: marketing_advertising_or_promotion
+    name: Marketing, Advertising or Promotion
 
-  - fides_key: "first_party_advertising"
-    name: "First Party Advertising"
-    parent_key: "marketing_advertising_or_promotion"
+  - fides_key: marketing_advertising_or_promotion.first_party
+    name: First Party Advertising
+    parent_key: marketing_advertising_or_promotion
 
-  - fides_key: "third_party_advertising"
-    name: "Third Party Advertising"
-    parent_key: "marketing_advertising_or_promotion"
+  - fides_key: marketing_advertising_or_promotion.third_party
+    name: Third Party Advertising
+    parent_key: marketing_advertising_or_promotion
 
   # Marketing, Advertising or Promotion -> First Party Advertising
-  - fides_key: "first_party_contextual_advertising"
-    name: "First Party Contextual Advertising"
-    parent_key: "first_party_advertising"
+  - fides_key: marketing_advertising_or_promotion.first_party.contextual
+    name: First Party Contextual Advertising
+    parent_key: marketing_advertising_or_promotion.first_party
 
-  - fides_key: "first_party_personalized_advertising"
-    name: "First Party Personalized Advertising"
-    parent_key: "first_party_advertising"
+  - fides_key: marketing_advertising_or_promotion.first_party.personalized
+    name: First Party Personalized Advertising
+    parent_key: marketing_advertising_or_promotion.first_party
 
   # Marketing, Advertising or Promotion -> Third Party Advertising
-  - fides_key: "third_party_personalized_advertising"
-    name: "Third Party Personalized Advertising"
-    parent_key: "third_party_advertising"
+  - fides_key: marketing_advertising_or_promotion.third_party.personalized
+    name: Third Party Personalized Advertising
+    parent_key: marketing_advertising_or_promotion.third_party
 
   # Third Party Sharing
-  - fides_key: "third_party_sharing"
-    name: "Third Party Sharing"
+  - fides_key: third_party_sharing
+    name: Third Party Sharing
 
-  - fides_key: "sharing_for_processing_payments"
-    name: "Sharing for Processing Payments"
-    parent_key: "third_party_sharing"
+  - fides_key: third_party_sharing.payment_processing
+    name: Sharing for Processing Payments
+    parent_key: third_party_sharing
 
-  - fides_key: "sharing_for_personalized_advertising"
-    name: "Sharing for Personalized Advertising"
-    parent_key: "third_party_sharing"
+  - fides_key: third_party_sharing.personalized_advertising
+    name: Sharing for Personalized Advertising
+    parent_key: third_party_sharing
 
-  - fides_key: "sharing_for_legal_obligation"
-    name: "Sharing for Legal Obligation"
-    parent_key: "third_party_sharing"
+  - fides_key: third_party_sharing.legal_obligation
+    name: Sharing for Legal Obligation
+    parent_key: third_party_sharing
 
   # Collect
-  - fides_key: "collect"
-    name: "Collect"
+  - fides_key: collect
+    name: Collect
 
   # Train AI System
-  - fides_key: "train_ai_system"
-    name: "Train AI System"
+  - fides_key: train_ai_system
+    name: Train AI System
