--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -1,15 +1,15 @@
 system:
   - organization_fides_key: 1
-    fides_key: "demo_analytics_system"
-    name: "Demo Analytics System"
-    description: "A system used for analyzing customer behaviour."
-    system_type: "Service"
+    fides_key: demo_analytics_system
+    name: Demo Analytics System
+    description: A system used for analyzing customer behaviour.
+    system_type: Service
     privacy_declarations:
-      - name: "Analyze customer behaviour for improvements."
+      - name: Analyze customer behaviour for improvements.
         data_categories:
-          - provided_contact_information
-          - cookie_id
-        data_use: improve_the_product_or_service
+          - user.provided.identifiable.contact
+          - user.derived.identifiable.device.cookie_id
+        data_use: improve_product_or_service
         data_subjects:
           - customer
         data_qualifier: identified_data
@@ -17,15 +17,15 @@ system:
           - demo_users_dataset
 
   - organization_fides_key: 1
-    fides_key: "demo_marketing_system"
-    name: "Demo Marketing System"
-    description: "Collect data about our users for marketing."
-    system_type: "Service"
+    fides_key: demo_marketing_system
+    name: Demo Marketing System
+    description: Collect data about our users for marketing.
+    system_type: Service
     privacy_declarations:
-      - name: "Collect data for marketing"
+      - name: Collect data for marketing
         data_categories:
-          # - provided_contact_information # uncomment to add this category to the system
-          - cookie_id
+          # - user.provided.identifiable.contact # uncomment to add this category to the system
+          - user.derived.identifiable.device.cookie_id
         data_use: marketing_advertising_or_promotion
         data_subjects:
           - customer
