--- a/fidesctl/tests/data/failing_taxonomy.yml
+++ b/fidesctl/tests/data/failing_taxonomy.yml
@@ -1,184 +1,161 @@
 data_category:
-  - fides_key: user_provided_data
-    name: "User Provided Data"
-    description: "Data provided or created directly by a user of the system."
+  - fides_key: user
+    name: User Data
 
-  - fides_key: political_opinion
-    name: "Political Opinion"
-    parent_key: user_provided_data
-    description: "Data related to the individual's political opinions."
+  - fides_key: user.provided
+    name: User Provided Data
+    parent_key: user
 
-  - fides_key: name
-    name: "Name"
-    parent_key: user_provided_data
-    description: "User's real name."
+  - fides_key: user.provided.identifiable
+    name: User Provided Identifiable Data
+    parent_key: user.provided
+
+  - fides_key: user.provided.identifiable.political_opinion
+    name: Political Opinion
+    parent_key: user.provided.identifiable
+
+  - fides_key: user.provided.identifiable.name
+    name: Name
+    parent_key: user.provided.identifiable
 
 data_subject:
-  - fides_key: "anonymous_user"
-    name: "Anonymous User"
+  - fides_key: anonymous_user
+    name: Anonymous User
 
-  - fides_key: "citizen_voter"
-    name: "Citizen Voter"
+  - fides_key: citizen_voter
+    name: Citizen Voter
 
-  - fides_key: "commuter"
-    name: "Commuter"
+  - fides_key: commuter
+    name: Commuter
 
-  - fides_key: "consultant"
-    name: "Consultant"
+  - fides_key: consultant
+    name: Consultant
 
-  - fides_key: "customer"
-    name: "Custom"
+  - fides_key: customer
+    name: Custom
 
 data_use:
-  - fides_key: "provide"
-    name: "Provide"
-    description: |
-      Provide means the use of specified data categories:
-      — from the source scope by an applications and services scope to provide and protect the current
-        capabilities of a results scope;
-      — to communicate with the customer about the status and availability of the current capabilities of the result scope;
-      — including providing support for the result scope and to protect at a minimum the specified data category from the source scope.
-      Provide can include the use of specified data categories to protect the rights and property of the cloud service provider and to prevent loss of life or serious injury to anyone. For example:
-      Example 1:
-      This cloud service uses derived data only to provide the cloud services defined in the cloud services agreement.
-      NOTE 1 In this example, use of derived data is restricted to provide the service contracted for in the cloud service agreement, including operational support system (OSS) and business support system (BSS) for exclusively those services. In the case of a single contracted service, “This application” or “This service” can also define the scope (see 9.4.2.3).
-      NOTE 2 The data use statement structure used in this example is described in Clause 10.
-      In the case where a single scope is involved, provide also means to protect the customer content data that exists within this scope and to provide and communicate with the customer about the status and availability of the current capabilities of this scope.
+  - fides_key: provide_product_or_service
+    name: Provide the Product or Service
 
-  - fides_key: "provide_operational_support_for_contracted_service"
-    name: "Provide Operational Support for Contracted Service"
-    parent_key: "provide"
-    description: |
-      This usage is related to the acquisition, processing and storage of data about the usage of a cloud service (derived data) contracted by a specific cloud service customer in order to operate and protect the systems and processes necessary for the provision of this cloud service. This includes:
-      — service usage data to be used for capacity planning;
-      — monitoring of user behaviour to identify potential attackers and to perform forensic analyses;
-      — logging data for system and network maintenance and optimization;
-      — correlation of service usage data and system events for fault tracking and root cause analysis.
+  - fides_key: provide_product_or_service.support
+    name: Support the Product or Service
+    parent_key: provide_product_or_service
 
-  - fides_key: "improvement_of_business_support_for_contracted_service"
-    name: "Improvement of Business Support for Contracted Service"
-    parent_key: "provide"
-    description: |
-      This usage is related to acquisition, processing and storage of data on the usage of contracted services (derived data) being used for business support related to this service. This includes:
-      — evaluation of service usage data to determine user preference about use of the current capabilities of the services contracted for in the SLA;
-      — financial controlling, budgeting and resource planning.
+  - fides_key: provide_product_or_service.support_optimization
+    name: Support Optimization
+    parent_key: provide_product_or_service
+
 
 data_qualifier:
-  - fides_key: "identified_data"
-    name: "Identified Data"
-    description: |
-      Identified data is data that can unambiguously be associated with a specific person because PII is observable in the information. Guidance on what can be considered as identifiers can be found in ISO/IEC 29100:2011, 4.4.1.
-      Identified data can be either PII or OPD.
+  - fides_key: identified_data
+    name: Identified Data
 
-  - fides_key: "pseudonymized_data"
-    name: "Pseudonymized Data"
-    description: |
-      Pseudonymized data is data for which all identifiers are substituted by aliases for which the alias assignment is such that it cannot be reversed by reasonable efforts of anyone other than the party that performed them.
-      This corresponds to data resulting from the process of “pseudonymization” in ISO/IEC 29100:2011, 2.24 and described as “pseudonymous data” in ISO/IEC 29100:2011, 4.4.4.
-      Pseudonymized data can be either PII or OPD.
+  - fides_key: pseudonymized_data
+    name: Pseudonymized Data
 
 dataset:
   - organization_fides_key: 1
-    fides_key: "test_failing_db_dataset"
-    name: "Sample DB Dataset"
-    description: "This is a Sample Database Dataset"
-    datasetType: "MySQL"
-    location: "US East"
+    fides_key: test_db_dataset
+    name: Sample DB Dataset
+    description: This is a Sample Database Dataset
+    dataset_type: MySQL
+    location: US East
     fields:
-      - name: "First_Name"
-        description: "A First Name Field"
-        path: "sample_db_dataset.first_name"
-        dataCategories:
-          - "name"
-        dataQualifier: "identified_data"
-      - name: "Email"
-        description: "User's Email"
-        path: "sample_db_dataset.email"
-        dataCategories:
-          - "user_provided_data"
-        dataQualifier: "identified_data"
-      - name: "political_opinion"
-        description: "User's political opinion"
-        path: "sample_db_dataset.political_opinion"
-        dataCategories:
-          - "political_opinion"
-        dataQualifier: "pseudonymized_data"
+      - name: First_Name
+        description: A First Name Field
+        path: test_db_dataset.first_name
+        data_categories:
+          - user.provided.identifiable.name
+        data_qualifier: identified_data
+      - name: Email
+        description: User's Email
+        path: test_db_dataset.email
+        data_categories:
+          - user.provided.identifiable
+        data_qualifier: identified_data
+      - name: political_opinion
+        description: User's political opinion
+        path: test_db_dataset.political_opinion
+        data_categories:
+          - user.provided.identifiable.political_opinion
+        data_qualifier: pseudonymized_data
 
 system:
   - organization_fides_key: 1
-    fides_key: "dataAnalyticsSystem"
-    name: "Data Analytics System"
-    description: "A system used for analyzing customer behaviour."
-    systemType: "Service"
-    privacyDeclarations:
-      - name: "Analyze Anonymous Content"
-        dataCategories:
-          - "user_provided_data"
-        dataUse: "provide"
-        dataQualifier: "pseudonymized_data"
-        dataSubjects:
-          - "customer"
-    systemDependencies: [customerDataSharingSystem]
+    fides_key: data_analytics_system
+    name: Data Analytics System
+    description: A system used for analyzing customer behaviour.
+    system_type: Service
+    privacy_declarations:
+      - name: Analyze Anonymous Content
+        data_categories:
+          - user.provided.identifiable
+        data_use: provide_product_or_service
+        data_qualifier: pseudonymized_data
+        data_subjects:
+          - customer
+    system_dependencies: [customer_data_sharing_system]
 
   - organization_fides_key: 1
-    fides_key: "customerDataSharingSystem"
-    name: "Customer Data Sharing System"
-    description: "Share data about our users with third-parties."
-    systemType: "Service"
-    privacyDeclarations:
-      - name: "Share Political Opinions"
-        dataCategories:
-          - "political_opinion"
-        dataUse: "share"
-        dataQualifier: "identified_data"
-        dataSubjects:
-          - "customer"
-        datasetReferences:
-          - "test_failing_db_dataset.Email"
-    systemDependencies: []
+    fides_key: customer_data_sharing_system
+    name: Customer Data Sharing System
+    description: Share data about our users with third-parties.
+    system_type: Service
+    privacy_declarations:
+      - name: Share Political Opinions
+        data_categories:
+          - user.provided.identifiable.political_opinion
+        data_use: third_party_sharing
+        data_qualifier: identified_data
+        data_subjects:
+          - customer
+        dataset_references:
+          - test_db_dataset.Email
+    system_dependencies: []
 
 policy:
   - organization_fides_key: 1
-    fides_key: "primaryPrivacyPolicy"
-    name: "Primary Privacy Policy"
-    description: "The main privacy policy for the organization."
+    fides_key: primary_privacy_policy
+    name: Primary Privacy Policy
+    description: The main privacy policy for the organization.
     rules:
       - organization_fides_key: 1
-        fides_key: "rejectTargetedMarketing"
-        name: "Reject Targeted Biometric Marketing"
-        description: "Disallow targeted marketing towards customers based on biometric data."
-        dataCategories:
-          inclusion: "ANY"
-          values:
-            - biometric_data
-        dataUses:
+        fides_key: reject_targeted_marketing
+        name: Reject Targeted Biometric Marketing
+        description: Disallow targeted marketing towards customers based on biometric data.
+        data_categories:
           inclusion: ANY
           values:
-            - market_advertise_or_promote
-            - offer_upgrades_or_upsell
-        dataSubjects:
+            - user.provided.identifiable.biometric
+        data_uses:
+          inclusion: ANY
+          values:
+            - marketing_advertising_or_promotion
+            - provide_product_or_service.offer_upgrades
+        data_subjects:
           inclusion: ANY
           values:
             - customer
-        dataQualifier: "identified_data"
+        data_qualifier: identified_data
         action: REJECT
 
       - organization_fides_key: 1
-        fides_key: rejectSharingPoliticalOpinions
-        name: "Disallow Sharing Political Opinions"
-        description: "Disallow sharing political opinions with third-parties."
-        dataCategories:
+        fides_key: reject_sharing_political_opinions
+        name: Disallow Sharing Political Opinions
+        description: Disallow sharing political opinions with third-parties.
+        data_categories:
           inclusion: ANY
           values:
-            - political_opinion
-        dataUses:
+            - user.provided.identifiable.political_opinion
+        data_uses:
           inclusion: ALL
           values:
-            - share
-        dataSubjects:
+            - third_party_sharing
+        data_subjects:
           inclusion: ANY
           values:
             - customer
             - patient
-        dataQualifier: "identified_data"
+        data_qualifier: identified_data
         action: REJECT
