Update references to legacy data_use keys

--- a/fidesctl/demo_resources/demo_policy.yml
+++ b/fidesctl/demo_resources/demo_policy.yml
@@ -13,7 +13,7 @@ policy:
         data_uses:
           inclusion: ANY
           values:
-            - marketing_advertising_or_promotion
+            - advertising
         data_subjects:
           inclusion: ANY
           values:
