--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -8,7 +8,7 @@ system:
         data_categories:
           - user.provided.identifiable.contact
           - user.derived.identifiable.device.cookie_id
-        data_use: improve_product_or_service
+        data_use: improve.system
         data_subjects:
           - customer
         data_qualifier: identified_data
@@ -24,7 +24,7 @@ system:
         data_categories:
           #- user.provided.identifiable.contact # uncomment to add this category to the system
           - user.derived.identifiable.device.cookie_id
-        data_use: marketing_advertising_or_promotion
+        data_use: advertising
         data_subjects:
           - customer
         data_qualifier: identified_data
